@@ -244,78 +244,6 @@ namespace Mono.WebCompareDB {
 			return cc.Comparison;
 		}
 
-		static string GetNodeName (string base_name, int node_id)
-		{
-			if (base_name == null)
-				return node_id.ToString ();
-			return String.Format ("{0}-{1}", base_name, node_id);
-		}
-
-		static void AppendValue (StringBuilder sb, object o)
-		{
-			if (!((o is string) || (o is DBNull))) {
-				if (o is bool)
-					sb.AppendFormat ("{0}\t", ((bool) o) ? 1 : 0);
-				else
-					sb.AppendFormat ("{0}\t", o);
-			} else {
-				sb.AppendFormat ("{0}\t", FormatString (o as string));
-			}
-		}
-
-		static void InsertTree (IDbConnection cnc, State state, ComparisonNode node, string base_name, int node_id)
-		{
-			StringBuilder sb = new StringBuilder ();
-			string node_name = GetNodeName (base_name, node_id); 
-			AppendValue (sb, node_name); // node_name
-			AppendValue (sb, state.MasterId); // master_id
-			AppendValue (sb, node_id); // child_id
-			AppendValue (sb, base_name == null ? "-" : base_name); // parent_name
-			AppendValue (sb, (int) node.Type); // comparison_type
-			AppendValue (sb, (int) node.Status); // status
-			AppendValue (sb, node.Extra); // extras
-			AppendValue (sb, node.Missing); // missing
-			AppendValue (sb, node.Present); // present
-			AppendValue (sb, node.Warning); // warning
-			AppendValue (sb, node.Todo); // todo
-			AppendValue (sb, node.Niex); // niex
-			AppendValue (sb, node.ThrowsNIE); // throwsnie
-			AppendValue (sb, node.Children.Count > 0); // has_children
-			AppendValue (sb, node.Messages.Count > 0 || node.Todos.Count > 0); // has_messages
-			AppendValue (sb, node.Name); // name
-			AppendValue (sb, node.TypeName); // typename
-			sb.Length--; // remove trailing \t
-			state.NodesWriter.WriteLine (sb);
-
-			InsertMessages (state, node_name, node.Messages, false);
-			InsertMessages (state, node_name, node.Todos, true);
-			int counter = 0;
-			foreach (ComparisonNode n in node.Children) {
-				InsertTree (cnc, state, n, node_name, counter);
-				counter++;
-			}
-		}
-
-		static void InsertMessages (State state, string node_name, List<string> strs, bool is_todo)
-		{
-			if (strs == null || strs.Count == 0)
-				return;
-
-			StringBuilder sb = new StringBuilder ();
-			foreach (string s in strs) {
-				sb.AppendFormat ("{0}\t{1}\t{2}\t{3}", node_name, state.MasterId, (is_todo) ? 1 : 0, FormatString (s));
-				state.MessagesWriter.WriteLine (sb);
-				sb.Length = 0;
-			}
-		}
-
-		static string FormatString (string str)
-		{
-			if (String.IsNullOrEmpty (str))
-				return "\\N";
-			return str.Replace ("\t", "\\\t").Replace ('\n', ' ').Replace ('\r', ' ');
-		}
-
 		static void FilterRoot (ComparisonNode node)
 		{
 			Filters filters = GetDataAccess ().GetFilters ();
